fix header on mobile

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     
 }
 header{
-    width: max-content;
+    min-width: max-content;
     min-height: 250px;  /* Ensure a minimum height */
     background-color: #333;
     
